--- a/homework07/style.css
+++ b/homework07/style.css
@@ -163,7 +163,8 @@ body {
     padding-top: 103px;
     padding-bottom: 80px;
     width: 100%;
-    background: url("../homework07/img/pictures/hero.png"), lightgray 50% / cover no-repeat;
+    background: no-repeat url("../homework07/img/pictures/hero.png"), #b7acaa right / cover no-repeat;
+    background-position: 50%;
 }
 
 .hero a {
@@ -174,7 +175,6 @@ body {
     color: var(--white, #FFF);
     font-family: Mulish;
     font-size: 18px;
-    font-style: normal;
     font-weight: 700;
     line-height: 30px;
     display: flex;
@@ -187,7 +187,6 @@ body {
     color: #FFF;
     font-family: Playfair Display;
     font-size: 48px;
-    font-style: normal;
     font-weight: 400;
     line-height: 67px;
     width: 361px;
@@ -228,7 +227,6 @@ body {
     color: var(--white, #FFF);
     font-family: Playfair Display;
     font-size: 32px;
-    font-style: normal;
     font-weight: 900;
     line-height: 45px;
     width: 200px;
@@ -271,7 +269,6 @@ body {
     color: var(--black, #1B2437);
     font-family: Playfair Display;
     font-size: 32px;
-    font-style: normal;
     font-weight: 900;
     line-height: 45px;
 }
@@ -280,7 +277,6 @@ body {
     color: var(--black, #1B2437);
     font-family: Mulish;
     font-size: 16px;
-    font-style: normal;
     font-weight: 400;
     line-height: 30px;
 }
@@ -390,8 +386,6 @@ body {
 .like_item p {
     color: #000;
     font-family: Mulish;
-    font-size: 16px;
-    font-style: normal;
     font-weight: 700;
     line-height: 30px;
     margin-left: 24px;
@@ -413,7 +407,6 @@ body {
     text-align: center;
     font-family: Mulish;
     font-size: 18px;
-    font-style: normal;
     font-weight: 700;
     line-height: 30px;
 }
@@ -426,7 +419,6 @@ body {
     color: #000;
     font-family: Playfair Display;
     font-size: 34px;
-    font-style: normal;
     font-weight: 700;
     line-height: 30px;
     align-self: center;
@@ -485,7 +477,6 @@ body {
     color: #000;
     font-family: Playfair Display;
     font-size: 18px;
-    font-style: normal;
     font-weight: 900;
     line-height: 30px;
 
@@ -495,7 +486,6 @@ body {
     color: #5C5C5C;
     font-family: Playfair Display;
     font-size: 16px;
-    font-style: normal;
     font-weight: 500;
     line-height: 30px;
 }
@@ -504,13 +494,10 @@ body {
     color: var(--gray-6, #8E8E93);
     font-family: Mulish;
     font-size: 16px;
-    font-style: normal;
     font-weight: 600;
     line-height: 30px;
     padding-bottom: 22px;
-
 }
-
 
 .footer_head a {
     text-decoration: none;
@@ -531,8 +518,7 @@ body {
     color: var(--gray-6, #8E8E93);
     font-family: Mulish;
     font-size: 12px;
-    font-style: normal;
     font-weight: 700;
     line-height: 30px;
-    /* 250% */
+
 }
