--- a/homework08/style.css
+++ b/homework08/style.css
@@ -47,7 +47,7 @@ ul {
     background-color: gray;
     width: 50px;
     height: 50px;
-    border: 1px solid red;
+    border: 1px solid rgba(131, 151, 59, 0.801);
     margin: 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
@@ -69,7 +69,8 @@ button {
     width: 494px;
     height: 92px;
     border-radius: 50px;
-    background-color: #30be3c;
+    background-color: #44D3A8;
+    ;
     margin: 300px;
     cursor: pointer;
     position: relative;
