--- a/homework08/style.css
+++ b/homework08/style.css
@@ -74,6 +74,11 @@ button {
     cursor: pointer;
     position: relative;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: all 0.3s ease-in-out;
+}
+
+button:hover {
+    background-color: #617ebd;
 }
 
 button::before,
