--- a/homework09/style.css
+++ b/homework09/style.css
@@ -103,26 +103,62 @@ body {
     overflow: hidden;
 }
 
+.header {
+    position: relative;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding-bottom: 164px;
+}
+
 .container {
     max-width: 1050px;
     margin: 0 auto;
+    padding: 5px;
 }
 
 .head_items {
     display: flex;
+    gap: 3px;
+    align-items: center;
+    margin: 3rem 0 8rem 0;
+}
+
+.head_items h2 {
+    color: #5282F0;
+    font-family: Product Sans;
+    font-size: 1.5rem;
+    font-weight: 700;
+    letter-spacing: -0.48px;
 }
 
 
 .head_text h1 {
-    width: 50%;
+    width: 60%;
     color: var(--333333, #333);
     font-family: Lato;
     font-size: 2.25rem;
     font-weight: 700;
     line-height: 1.32;
     letter-spacing: 1.08px;
+    margin-bottom: 30px;
 }
 
+.head_text p {
+    color: var(--4-f-4-f-4-f, #4F4F4F);
+    font-family: Lato;
+    font-size: 1.125rem;
+    font-weight: 400;
+    line-height: 1.44;
+    width: 45%;
+    margin-bottom: 50px;
+}
+
+.head_img {
+    position: absolute;
+    top: 0;
+    right: -290px;
+    z-index: -1;
+}
 
 
 
