--- a/homework09/style.css
+++ b/homework09/style.css
@@ -146,7 +146,7 @@ body {
 .head_text p {
     color: var(--4-f-4-f-4-f, #4F4F4F);
     font-family: Lato;
-    font-size: 1.125rem;
+    font-size: 1.25rem;
     font-weight: 400;
     line-height: 1.44;
     width: 45%;
@@ -164,13 +164,141 @@ body {
     margin-right: 15px;
 }
 
+.first_section {
+    padding-top: 109px;
+    background: linear-gradient(270deg, #FFF 0%, rgba(255, 255, 255, 0.00) 100%), rgba(255, 255, 255, 0.50), url("../homework09/img/sect1_bg.png") 50% no-repeat;
+}
+
+.first {
+    display: flex;
+    justify-content: space-between;
+    gap: 15%;
+    position: relative;
+}
+
+.items_notificstion {
+    display: flex;
+    gap: 73px;
+}
+
+.notification {
+    width: 360px;
+    border-radius: 4px;
+    background: #FFF;
+    box-shadow: -22.04164695739746px 23.878454208374023px 48.9814453125px 0px rgba(0, 0, 0, 0.50);
+    padding: 15px;
+    margin-bottom: 264px;
+}
+
+.icons_notification {
+    position: relative;
+}
+
+.icons_notification img {
+    position: absolute;
+    top: 0;
+    right: -72px;
+}
+
+.text_notification p {
+    color: #4F4F4F;
+    font-family: Lato;
+    font-weight: 700;
+    line-height: 1.32;
+    margin-bottom: 12px;
+}
+
+.text_notification h3 {
+    color: #000;
+    font-family: Lato;
+    font-size: 1.25rem;
+    font-weight: 500;
+    line-height: 1.32;
+    width: 76.618px;
+    margin-bottom: 13px;
+
+}
+
+.text_notification div {
+    color: #000;
+    font-family: Lato;
+    font-weight: 400;
+    line-height: 1.32;
+    margin-bottom: 13px;
+}
+
+.turn_notification {
+    margin: 10px;
+}
+
+.turn_notification label {
+    margin-right: 33px;
+}
+
+.video img {
+    position: absolute;
+    top: 165px;
+    left: 106px;
+    z-index: -1;
+}
+
+.what {
+    color: var(--brand-colour, #00ADEE);
+    font-family: Lato;
+    font-weight: 700;
+    line-height: 1.32;
+    margin-bottom: 27px;
+
+}
+
+.head_section {
+    color: var(--333333, #333);
+    font-family: Lato;
+    font-size: 1.6rem;
+    font-weight: 700;
+    line-height: 1.32;
+    margin-bottom: 27px;
+}
+
+.paragraph {
+    color: var(--4-f-4-f-4-f, #4F4F4F);
+    font-family: Lato;
+    font-weight: 400;
+    line-height: 1.44;
+    margin-bottom: 22px;
+}
+
+.anchor {
+    color: var(--brand-colour, #00ADEE);
+    font-family: Lato;
+    font-weight: 700;
+    line-height: 1.32;
+}
+
+.second_items {
+    display: flex;
+    gap: 90px;
+
+}
 
 
+.second_phone {
+    position: relative;
+}
 
+.phone_bot {
+    position: absolute;
+    bottom: 130px;
+    right: -30px;
+    z-index: 2;
+}
 
-
-
-
+.phone_message {
+    position: absolute;
+    top: 50px;
+    left: 10px;
+    z-index: 2;
+}
 
 
 .main {
