--- a/homework09/style.css
+++ b/homework09/style.css
@@ -158,11 +158,14 @@ body {
     position: absolute;
     top: 0;
     right: -290px;
+    z-index: -1;
 }
 
 .head_button_a {
     margin-right: 15px;
 }
+
+
 
 @media(max-width: 721px) {
     .head_img {
@@ -287,6 +290,7 @@ body {
     font-family: Lato;
     font-weight: 700;
     line-height: 1.32;
+    margin-bottom: 27px;
 }
 
 .head_section {
@@ -295,6 +299,7 @@ body {
     font-size: 1.6rem;
     font-weight: 700;
     line-height: 1.32;
+    margin-bottom: 27px;
 }
 
 .paragraph {
@@ -329,18 +334,80 @@ body {
 
 .phone_bot {
     position: absolute;
-    bottom: 130px;
-    right: -30px;
+    bottom: 140px;
+    right: -10px;
     z-index: 2;
+    width: 91px;
+    height: 91px;
+    background-color: #fff;
+    border-radius: 50%;
+    filter: drop-shadow(0px 3.1379308700561523px 15.689654350280762px rgba(0, 0, 0, 0.25)) drop-shadow(0px 2.5103447437286377px 6.275861740112305px rgba(51, 51, 51, 0.10));
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .phone_message {
     position: absolute;
-    top: 50px;
-    left: 10px;
+    top: 82px;
+    left: 41px;
     z-index: 2;
+    width: 91px;
+    height: 91px;
+    background-color: #FFF;
+    border-radius: 50%;
+    filter: drop-shadow(0px 3.1379308700561523px 15.689654350280762px rgba(0, 0, 0, 0.25)) drop-shadow(0px 2.5103447437286377px 6.275861740112305px rgba(51, 51, 51, 0.10));
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+.phone_message::after {
+    content: "7";
+    position: absolute;
+    top: 20px;
+    right: 15px;
+    z-index: 5;
+    width: 22.663px;
+    height: 22.728px;
+    background-color: #00ADEE;
+    border-radius: 50%;
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 15.062px;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle1 {
+    position: absolute;
+    top: 80px;
+    right: -39px;
+    width: 400px;
+    height: 400px;
+    border: 1px dashed var(--brand-colour, #00ADEE);
+    border-radius: 50%;
+    z-index: -1;
+}
+
+.circle2 {
+    position: absolute;
+    top: -19px;
+    right: -140px;
+    width: 600px;
+    height: 600px;
+    border: 1px dashed var(--brand-colour, #00ADEE);
+    border-radius: 50%;
+    z-index: -1;
+}
+
+.circle2_svg {
+    position: absolute;
+    top: 437px;
+    left: 20px;
+}
 
 .main {
     flex: 1 1 auto;
