--- a/homework09/style.css
+++ b/homework09/style.css
@@ -455,7 +455,7 @@ body {
     padding: 40px 0;
 }
 
-.uusers_title {
+.users_title {
     color: var(--333333, #333);
     font-family: Lato;
     font-size: 1.6rem;
