--- a/homework12/index.pug
+++ b/homework12/index.pug
@@ -3,6 +3,22 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Document
+        link(rel="stylesheet", href="style.css")
+        link(rel="preconnect", href="https://fonts.googleapis.com")
+        link(rel="preconnect", href="https://fonts.gstatic.com",crossorigin)
+        link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap",rel="stylesheet")
+        title Препроцесори
     body 
-       
+       header(class="header")
+        div(class="container")
+            nav(class="nav")
+                ul(class="nav_list")
+                    li(class="nav_list-item") 
+                        a(href="#", class="one") Home
+                    li(class="nav_list-item") 
+                        a(href="#", class="one") About 
+                    li(class="nav_list-item") 
+                        a(href="#", class="one") Contact
+                a(href="#") 
+                    span(class="logo") Landie 
+                button(type="button", class="nav_button") Buy Now   
