--- a/homework12/style.scss
+++ b/homework12/style.scss
@@ -5,16 +5,75 @@ body {
 .container {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 5px;
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-family: Roboto;
+
+    &_list {
+        display: flex;
+        gap: 60px;
+        list-style: none;
+
+        &-link {
+            color: var(--colour-main-blue-500, #505F98);
+            font-feature-settings: 'clig' off, 'liga' off;
+            text-decoration: none;
+            font-weight: 400;
+            line-height: 24px;
+        }
+
+    }
+
+    .logo {
+        color: var(--colour-logo-primary, #37447E);
+        font-feature-settings: 'clig' off, 'liga' off;
+        font-size: 26px;
+        font-weight: 900;
+        line-height: 38px;
+        flex: 0 1 20%;
+        text-decoration: none;
+    }
+
+    &_button {
+        border-radius: 2px;
+        background: var(--colour-main-blue-800, #111B47);
+        color: var(--colour-secondary-white-100-general, #FFF);
+        text-align: center;
+        font-feature-settings: 'clig' off, 'liga' off;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: Roboto;
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 18px;
+
+        width: 160px;
+        height: 26px;
+        cursor: pointer;
+    }
+
 }
 
-.nav_list {
-    display: flex;
-    gap: 60px;
-    list-style: none;
+.main {
+    .product {
+        &_heder {
+            color: var(--colour-main-blue-900, #091133);
+            font-feature-settings: 'clig' off, 'liga' off;
+
+            /* Medium 50 */
+            font-family: Roboto;
+            font-size: 50px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 66px;
+            /* 132% */
+            letter-spacing: 1px;
+        }
+    }
 }
